--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="primaryColor">#4dd0e1</color>
+    <color name="primaryLight">#88ffff</color>
+    <color name="primaryDark">#009faf</color>
 </resources>
